<resources>
    <string name="app_name">RoadStar</string>
    <string name="press_back_button_to_exit">Press back again to exit</string>
    <string name="exit_content">Are you sure want to exit?</string>
    <string name="confirmation">Confirmation</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="alphabets">aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUv VwWxXyYzZ</string>
    <string name="alphabets_withoutSpacing">aAbBcCdDeEfFgGhHiIjJkKlLmMnNoOpPqQrRsStTuUvVwWxXyYzZ</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.</string>
    <string name="allow_permissions">Please allow permissions to proceed</string>
    <string name="need_permission">Need Permission!</string>
    <string name="setting">Setting</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="welcome">Welcome</string>
    <string name="signin">Sign In</string>
    <string name="register">Register</string>
    <string name="welcome_screen_msg">RoadStar Corporation App is a ground breaking crowd delivery platform where multiple businesses and everyone shares delivery provider to send and receive packages or goods for both local and international deliveries</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="enter_otp_lbl">Enter the 4 digit code send to you \nAt </string>
    <string name="resend_code">Resend Code</string>
    <string name="next">Next</string>
    <string name="submit">Submit</string>
    <string name="update">Update</string>
    <string name="home">Home</string>
    <string name="manage_vehicle">Manage vehicle</string>
    <string name="document">Document</string>
    <string name="history">History</string>
    <string name="earning">Earning</string>
    <string name="payment_method">Payment Method</string>
    <string name="suppport">Support</string>
    <string name="logout">Logout</string>
    <string name="mobile">Mobile</string>
    <string name="or_lbl">Or</string>
    <string name="error_invalid_mobile">Please enter a valid mobile number</string>
    <string name="error_blank_mobile">Please enter the mobile number</string>
    <string name="no_internet_error_msg">There might be a problem in the network connection</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="password">Password</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="username">User Name</string>
    <string name="dont_have_account">Don\'t have an Account?</string>
    <string name="registered">Registered Now</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="forgot_text">Don\'t worry! Just enter your email ID below and we\'ll send you the password reset instructions.</string>
    <string name="request">Request</string>
    <string name="all_cycle">Tricycle\n</string>
    <string name="scooter">Scooter</string>
    <string name="car">Car\n</string>
    <string name="pickup_truck">Pickup Truck\n</string>
    <string name="pickup_truck_header">Pickup Truck</string>
    <string name="bulk_long">Haul Truck\n</string>
    <string name="bulk_long_header">Haul Truck</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="drop_location">Drop Location</string>
    <string name="vehicle_scooter">Vehicle Scooter</string>
    <string name="vehicle_car">Vehicle Car</string>
    <string name="vehicle_cycle">Vehicle Cycle</string>
    <string name="totol_distance">Total Distance :</string>
    <string name="courier_details">Package Details</string>
    <string name="receiver_details">Receiver Details</string>
    <string name="product_name">Product Name</string>
    <string name="product_category">Category</string>
    <string name="product_type">Product Type</string>
    <string name="product_weight">Product Weight</string>
    <string name="description">Description</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="instruction">Instructions</string>
    <string-array name="category_spinner_options">
        <item>Metal Equipment</item>
        <item>Plastic Goods</item>
        <item>Wood Items</item>
        <item>Glass Materials</item>
        <item>Ceramics items</item>
        <item>Synthetic fibers</item>
        <item>Liquid Containers</item>
        <item>Composites Goods</item>
        <item>Food/beverages items</item>
        <item>Liquors</item>
        <item>Cosmetics</item>
        <item>Documents</item>
        <item>Household Goods</item>
        <item>Grocery Items</item>
        <item>Sports - general</item>
        <item>Pharmaceuticals/medicines</item>
        <item>PPE/Hospital Equipments</item>
        <item>Construction Material</item>
        <item>Agricultural Goods</item>
        <item>Live Animals</item>
        <item>Hazardous/Radioactive Material</item>
    </string-array>
    <string-array name="product_spinner_options">
        <item>Load</item>
        <item>Package</item>
        <item>Parcel</item>
        <item>Cargo</item>
        <item>Freight</item>
    </string-array>
    <string-array name="name_spinner_options">
        <item>Aman</item>
        <item>Prateek</item>
        <item>Bharat</item>
        <item>Manish</item>
    </string-array>
    <string name="receiver_detail">Receiver Detail</string>
    <string name="phone_number">Phone Number</string>
    <string name="proceed_to_pay">Proceed To Pay</string>
    <string name="name">Name</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="submit_your_card_details">Submit Your Card Details</string>
    <string name="done">Done</string>
    <string name="pin">PIN</string>
    <string name="cvv_no">CVV No</string>
    <string name="expiry">Exp</string>
    <string name="modify_request">Modify Request</string>
    <string name="submit_request">Submit Request</string>
    <string name="cancel_request">Cancel Request ?</string>
    <string name="are_you_sure_you_want_to_cancel_this_request">Are you sure you want to\n cancel the request?</string>
    <string name="request_accpeted">Request Accepted</string>
    <string name="your_request_has_been_submitted_by_driver">Your request has been successfuly submitted.</string>
    <string name="modify_request_dialog_lbl">Modify Request ?</string>
    <string name="are_you_sure_want_modify_request">Are you sure you want to\n modify the request?</string>
    <string name="choose_picture">Choose a Picture</string>
    <string name="current_status_of_your_package">Current status of your package</string>
    <string name="chat_with_driver">Chat with driver</string>
    <string name="height">Height</string>
    <string name="width">Width</string>
    <string name="product_distribution">Product distribution</string>
    <string name="rating">Rating</string>
    <string name="your_are">You are RoadStar !</string>
    <string name="you_received">You Received 4 star</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="booking_lbl">Bookings</string>
    <string name="settings_lbl">Settings</string>
    <string name="notifications_lbl">Notifications</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save">Save</string>
    <string name="request_number">Request number</string>
    <string name="please_fill_the_full_information_about_your_package">Please fill the full information about your package which you want to be claimed</string>
    <string name="your_request_hasbeen_successfully_submitted">Your request has been succesfully submitted, our team will contact you soon</string>
    <string name="support">Support</string>
    <string name="logout_msg">Are you sure you want to\n Logout?</string>
    <string name="my_profile">My Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="service_provider">Service Provider</string>
    <string name="register_as_company">Register as a company</string>
    <string name="register_as_driver">Register as a driver</string>
    <string name="register_as_provider">Register as a provider</string>
    <string name="earning_amount">Earning Amount</string>
    <string name="existing_vehicle">Existing Vehicle</string>
    <string name="add_new_vehicle">Add New Vehicle</string>
    <string name="view_full_details">View Full Details</string>
    <string name="request_details">Request Details</string>
    <string name="accept">Accept</string>
    <string name="vehicle_image">Vehicle Image</string>
    <string name="licence">Licence</string>
    <string name="insurance">Insurance</string>
    <string name="residence_image">Residence Image</string>
    <string name="please_enter_details">Please enter the details</string>
    <string name="vehicle_name">Vehicle Name</string>
    <string name="vehicle_color">Vehicle Color</string>
    <string name="vehicle_type">Vehicle Type</string>
    <string name="load_size">Load Size</string>
    <string name="upload_vehicle_image">upload Vehicle Image</string>
    <string name="upload_licence">Upload Licence</string>
    <string name="upload_licence_req_no">Upload Licence Registration No</string>
    <string name="upload_insurance">Upload Insurance</string>
    <string name="upload_residence_proof">upload Residence Proof</string>
    <string name="total_no_of_vehicles">Total Number Of Vehicles</string>
    <string name="please_enter_company_details">Please enter the company details</string>
    <string name="company_name">Company Name</string>
    <string name="company_reg_no">Company registration number</string>
    <string name="total_vehicle_no">Total number of vehicles</string>
    <string name="service_type">Service Type</string>
    <string name="service_medium">Service Medium</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="server_error">There was a problem connecting to the server. Please try again later.</string>
    <string name="error_blank_OTP">Please enter 4 digit OTP</string>
    <string name="error_blank_company_name">Please enter the company name</string>
    <string name="error_blank_company_req_no">Please enter the company Registration number</string>
    <string name="error_blank_email">Please enter the email address</string>
    <string name="error_blank_address">Please enter the address</string>
    <string name="error_blank_password">Please enter the password</string>
    <string name="error_password_not_match">Password do not match</string>
    <string name="error_document">Please select all the document</string>
    <string name="error_first_name">Please enter the first name</string>
    <string name="error_last_name">Please enter the last name</string>
    <string name="error_practical_details">Please enter the practical details</string>
    <string name="error_size_may_transport">Please enter the Size you may transport</string>
    <string name="error_depart">Please enter the Departure From</string>
</resources>