<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="0.4"
            android:orientation="vertical">

            <include
                android:id="@+id/screen_toolbar"
                layout="@layout/global_toolbar" />

            <include
                android:id="@+id/screen_banner_view"
                layout="@layout/global_banner_view" />

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0"
            android:layout_weight="0.6">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorwhite"
                android:orientation="vertical"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginEnd="@dimen/dp_16"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_16sdp"
                        android:layout_marginEnd="@dimen/_16sdp"
                        android:orientation="vertical">

                        <com.roadstar_serviceprovider.utils.Road_Lable
                            style="@style/medium_black_14_text"
                            android:text="@string/please_enter_details"
                            android:textSize="@dimen/text_16" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.roadstar_serviceprovider.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:layout_marginTop="@dimen/_20sdp"
                                android:text="@string/vehicle_type"
                                android:textAllCaps="true"
                                android:textColor="@color/colorLabel" />

                            <androidx.appcompat.widget.AppCompatSpinner
                                android:id="@+id/no_vehicle_spinner"
                                style="@style/spinner_style"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="-15dp"
                                android:paddingStart="@dimen/dp_0"
                                android:spinnerMode="dropdown" />
                        </LinearLayout>

                        <com.roadstar_serviceprovider.utils.Road_Lable
                            style="@style/regular_black_14_text"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="@string/vehicle_name"
                            android:textAllCaps="true"
                            android:textColor="@color/colorLabel" />

                        <EditText style="@style/edittext_style" />


                        <com.roadstar_serviceprovider.utils.Road_Lable
                            style="@style/regular_black_14_text"
                            android:layout_marginTop="@dimen/_20sdp"
                            android:text="@string/vehicle_color"
                            android:textAllCaps="true"
                            android:textColor="@color/colorLabel" />

                        <EditText style="@style/edittext_style" />


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_20sdp">

                            <com.roadstar_serviceprovider.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:layout_alignParentLeft="true"
                                android:text="@string/upload_vehicle_image"
                                android:textAllCaps="true"
                                android:textColor="@color/colorLabel" />

                            <ImageView
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/attach"
                                android:tint="@color/colorLabel" />

                        </RelativeLayout>


                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.roadstar_serviceprovider.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:layout_alignParentLeft="true"
                                android:text="@string/upload_licence"
                                android:textAllCaps="true"
                                android:textColor="@color/colorLabel" />

                            <ImageView
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/attach"
                                android:tint="@color/colorLabel" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.roadstar_serviceprovider.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:layout_alignParentLeft="true"
                                android:text="@string/upload_licence_req_no"
                                android:textAllCaps="true"
                                android:textColor="@color/colorLabel" />

                            <ImageView
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/attach"
                                android:tint="@color/colorLabel" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.roadstar_serviceprovider.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:layout_alignParentLeft="true"
                                android:text="@string/upload_insurance"
                                android:textAllCaps="true"
                                android:textColor="@color/colorLabel" />

                            <ImageView
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/attach"
                                android:tint="@color/colorLabel" />

                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/_10sdp">

                            <com.roadstar_serviceprovider.utils.Road_Lable
                                style="@style/regular_black_14_text"
                                android:layout_alignParentLeft="true"
                                android:text="@string/upload_residence_proof"
                                android:textAllCaps="true"
                                android:textColor="@color/colorLabel" />

                            <ImageView
                                android:layout_width="@dimen/_16sdp"
                                android:layout_height="@dimen/_16sdp"
                                android:layout_alignParentRight="true"
                                android:background="@drawable/attach"
                                android:tint="@color/colorLabel" />

                        </RelativeLayout>


                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/viewSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_20sdp"
                        android:orientation="horizontal">

                        <com.roadstar_serviceprovider.utils.Road_Lable
                            style="@style/regular_black_14_text"

                            android:text="@string/already_have_account"
                            android:textColor="@color/colorblack"
                            android:textSize="@dimen/_12sdp" />

                        <com.roadstar_serviceprovider.utils.Road_Lable
                            style="@style/regular_black_14_text"
                            android:layout_marginLeft="@dimen/_5sdp"
                            android:text="@string/signin"
                            android:textColor="@color/colorPrimary"
                            android:textSize="@dimen/_12sdp" />

                    </LinearLayout>
                </LinearLayout>

                <include
                    android:id="@+id/register_btn"
                    layout="@layout/action_red_gradient_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dp_16"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginEnd="@dimen/dp_16"
                    app:title="@{@string/next}" />

            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</layout>