<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/dp_30"
    android:paddingEnd="@dimen/dp_30">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:cardBackgroundColor="@color/colorwhite"
        android:elevation="@dimen/dp_1"
        app:cardCornerRadius="@dimen/_4sdp"
        app:cardUseCompatPadding="true"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.roadstar_serviceprovider.utils.Road_Lable
                android:id="@+id/dialog_title"
                style="@style/medium_black_16_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_24"
                android:text="@string/cancel_request"
                android:textColor="@color/colorPrimary" />


            <com.roadstar_serviceprovider.utils.Road_Lable
                android:id="@+id/dialog_message"
                style="@style/regular_black_16_text"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/dp_15"
                android:lineSpacingExtra="@dimen/dp_8"
                android:text="@string/are_you_sure_you_want_to_cancel_this_request"
                android:textAlignment="center"
                android:textColor="@color/colorblack" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_24"
                android:orientation="vertical"
                android:weightSum="1">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_1sdp"
                    android:background="@color/color_seperator" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="@dimen/dp_56"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <RelativeLayout
                        android:id="@+id/submit_btRel"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="horizontal">

                        <com.roadstar_serviceprovider.utils.Road_Lable
                            android:id="@+id/submit_bt"
                            style="@style/medium_black_14_text"
                            android:layout_centerInParent="true"
                            android:text="@string/yes"
                            android:textColor="@color/colorblack"
                            app:textAllCaps="true" />

                        <View
                            android:layout_width="@dimen/_1sdp"
                            android:layout_height="@dimen/_25sdp"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_marginBottom="@dimen/_5sdp"
                            android:background="@color/color_seperator"/>
                    </RelativeLayout>


                    <RelativeLayout
                        android:id="@+id/cancel_btRel"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="match_parent"
                        android:layout_weight="0.5"
                        android:orientation="vertical">

                        <com.roadstar_serviceprovider.utils.Road_Lable
                            android:id="@+id/cancel_bt"
                            style="@style/medium_black_14_text"
                            android:layout_centerInParent="true"
                            android:layout_marginTop="@dimen/dp_4"
                            android:text="@string/no"
                            android:textColor="@color/colorPrimary"
                            app:textAllCaps="true" />

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>